# hey

./: .env.example  .gitignore  README.md  archive_probe.py  archive_rpc.py  backfill.py  backfill_intrachain.py  backfill_v3.py  backtest_gap.py  capture_cost.py  cex_monitor.py  checks.py  collector.py  conftest.py  crosschain_triage.py  cups_transport.py  d1_5_crossprotocol_envelope.py  d1_6_simulated_executor_envelope.py  d1_mev_boundary_control.py  d2a_crossprotocol_registry.py  d2b0_cohort_routes.py  d2b1_liveness.py  d2b2_bench.py  d2b2_lots.py  d2b2_measure.py  d2b2_probe.py  d2b2v2_measure.py  diag_pair.py  funding_backtest.py  funding_extremes.py  funding_regime.py  manifest.py  phase0_okx_funding.py  phase0b_binance_funding.py  phase1_binance_backfill.py  pyproject.toml  requirements.txt  run_collector.ps1  run_dex_cex.py  run_mav_multi.py  (+12 more)
config/: economic_identity.json  universe_base.json
contracts/: CrossProtocolExecutor.json  CrossProtocolExecutor.sol
dashboard/: index.html  server.py
data/: README.md
docs/: DECISIONS.md  EVIDENCE_LEDGER.md  GLOSSARY.md  MECHANISM_MAP.md  STATE.md  TIDY_PLAN.md  core_notes.md  data_integrity.md  formulas.md  integrity_backlog.md  route_evaluator.md  run_manifest_standard.md
sim/: __init__.py  amm_v2.py  amm_v2_int.py  chain.py  contracts.py  economic_identity.py  identity.py  integrity.py  pricing.py  quote_v3.py  route_eval.py  route_quoted.py  validate.py
tests/: test_amm_v2.py  test_chain_freshness.py  test_contracts.py  test_cups_transport.py  test_d1_5_pure.py  test_d1_6_pure.py  test_d1_pure.py  (+15 more)
(+50 files in other folders)
